# SAM2_Masking

./: .gitignore  LICENSE  Readme.md  core.py  pyproject.toml  requirements.txt
sam2/: setup_samurai.sh
sam2_masking/: __init__.py  __main__.py  cli.py  core.py
